--- a/Bicycle Model.ipynb
+++ b/Bicycle Model.ipynb
@@ -2,15 +2,24 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
     "from scipy.integrate import odeint\n",
     "from scipy.optimize import minimize\n",
+    "from scipy.io import loadmat\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
+    "import pandas as pd\n",
     "import math"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Bicycle Model"
    ]
   },
   {
@@ -64,6 +73,351 @@
     "    new_y = vx * math.sin(psi) + vy * math.cos(psi)\n",
     "    return [new_x, new_y, r, ax, ay, a_yaw, delta]\n",
     "    "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Getting Data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mat = loadmat('20210201_run3_data.mat')\n",
+    "# this gives us a dictionary of arrays.. here are the values that we need to extract to look at\n",
+    "# crop to entries 11600:91200 (275s to 595s) in the Run3 file\n",
+    "# X- OXT_E\n",
+    "# Y- OXT_N\n",
+    "# yaw- OXT_aYaw\n",
+    "# Vx- OXT_vxCG\n",
+    "# Vy- OXT_vyCG\n",
+    "# yawrate- OXT_nYaw\n",
+    "# steer angle- CMD_aWheelFSteer (this is in degrees so * pi/180 to get radians) \n",
+    "# accel request- CMD_gLongRequest (in g so *9.8 to get m/s)\n",
+    "# real ax- OXT_axCG\n",
+    "# real ay- OXT_ayCG"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "time = mat['Time'][:,0]\n",
+    "x = mat['OXT_E']\n",
+    "y = mat['OXT_N']\n",
+    "psi = mat['OXT_aYaw']\n",
+    "vx = mat['OXT_vxCG']\n",
+    "vy = mat['OXT_vyCG']\n",
+    "r = mat['OXT_nYaw']\n",
+    "steer = mat['CMD_aWheelFSteer'] # in degrees so * pi/180 to get radians\n",
+    "D = mat['CMD_gLongRequest'] # in g so *9.8 to get m/s\n",
+    "real_ax = mat['OXT_axCG']\n",
+    "real_ay = mat['OXT_ayCG']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 100,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "atime = 275.036 # start the data\n",
+    "btime = 595"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 112,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0.06146778 0.06052634 0.06451372 0.071417   0.07229017]\n",
+      "[0.00107282 0.00105638 0.00112598 0.00124646 0.0012617 ]\n"
+     ]
+    }
+   ],
+   "source": [
+    "df = pd.DataFrame(x[(x[:,0] >= atime) & (x[:,0] <= btime)], columns=['time', 'x'])\n",
+    "data = [y, psi, vx, vy, r, steer, D, real_ax, real_ay]\n",
+    "labels = ['y', 'psi', 'vx', 'vy', 'r', 'steer', 'D', 'real_ax', 'real_ay']\n",
+    "\n",
+    "for i in range(len(data)):\n",
+    "    label = labels[i] # get label\n",
+    "#     print(label)\n",
+    "    time_cut_data = data[i][(data[i][:,0] >= atime) & (data[i][:,0] <= btime)] # get 2d array in time frame\n",
+    "    if label in ('steer', 'D'):\n",
+    "        # we need to downsample\n",
+    "        time_cut_data = time_cut_data[::10]\n",
+    "        \n",
+    "    # manually check that they line up correctly\n",
+    "    # print(time_cut_data[:,0][:5])\n",
+    "    # print(time_cut_data[:,0][-5:])\n",
+    "    # print(time_cut_data.shape)\n",
+    "    \n",
+    "    values = time_cut_data[:,1] # now extract the actual column value\n",
+    "    \n",
+    "    if label == 'steer':\n",
+    "        # multiply pi/180 to get rad\n",
+    "        print(values[:5])\n",
+    "        values *= math.pi / 180\n",
+    "        print(values[:5])\n",
+    "    elif label == 'D':\n",
+    "        # multiple by 9.8 to get m/s^2\n",
+    "        print(values[:5])\n",
+    "        values *= 9.8\n",
+    "        print(values[:5])\n",
+    "    \n",
+    "    df[labels[i]] = time_cut_data[:,1] # now extract the actual column value\n",
+    "    \n",
+    "df.to_csv('20210201_parsed_run3_data.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 113,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>time</th>\n",
+       "      <th>x</th>\n",
+       "      <th>y</th>\n",
+       "      <th>psi</th>\n",
+       "      <th>vx</th>\n",
+       "      <th>vy</th>\n",
+       "      <th>r</th>\n",
+       "      <th>steer</th>\n",
+       "      <th>D</th>\n",
+       "      <th>real_ax</th>\n",
+       "      <th>real_ay</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>275.036</td>\n",
+       "      <td>-101.308861</td>\n",
+       "      <td>19.530313</td>\n",
+       "      <td>-2.566862</td>\n",
+       "      <td>14.049075</td>\n",
+       "      <td>0.064813</td>\n",
+       "      <td>-0.00306</td>\n",
+       "      <td>0.001073</td>\n",
+       "      <td>-0.419252</td>\n",
+       "      <td>-0.2477</td>\n",
+       "      <td>0.5202</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>275.076</td>\n",
+       "      <td>-101.002190</td>\n",
+       "      <td>19.059580</td>\n",
+       "      <td>-2.566963</td>\n",
+       "      <td>14.046067</td>\n",
+       "      <td>0.070796</td>\n",
+       "      <td>-0.00887</td>\n",
+       "      <td>0.001056</td>\n",
+       "      <td>-0.419129</td>\n",
+       "      <td>-0.1003</td>\n",
+       "      <td>0.1653</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>275.116</td>\n",
+       "      <td>-100.695587</td>\n",
+       "      <td>18.588818</td>\n",
+       "      <td>-2.567172</td>\n",
+       "      <td>14.046994</td>\n",
+       "      <td>0.067643</td>\n",
+       "      <td>-0.00909</td>\n",
+       "      <td>0.001126</td>\n",
+       "      <td>-0.413074</td>\n",
+       "      <td>-0.0117</td>\n",
+       "      <td>0.0054</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>275.156</td>\n",
+       "      <td>-100.389305</td>\n",
+       "      <td>18.117285</td>\n",
+       "      <td>-2.567444</td>\n",
+       "      <td>14.055491</td>\n",
+       "      <td>0.059404</td>\n",
+       "      <td>-0.01306</td>\n",
+       "      <td>0.001246</td>\n",
+       "      <td>-0.449214</td>\n",
+       "      <td>-0.0894</td>\n",
+       "      <td>-0.0761</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>275.196</td>\n",
+       "      <td>-100.082977</td>\n",
+       "      <td>17.645878</td>\n",
+       "      <td>-2.567532</td>\n",
+       "      <td>14.051016</td>\n",
+       "      <td>0.066986</td>\n",
+       "      <td>0.00144</td>\n",
+       "      <td>0.001262</td>\n",
+       "      <td>-0.433608</td>\n",
+       "      <td>-0.0839</td>\n",
+       "      <td>0.5010</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7995</th>\n",
+       "      <td>594.836</td>\n",
+       "      <td>-167.020935</td>\n",
+       "      <td>120.190155</td>\n",
+       "      <td>-2.566120</td>\n",
+       "      <td>13.627166</td>\n",
+       "      <td>0.029047</td>\n",
+       "      <td>-0.02381</td>\n",
+       "      <td>-0.002339</td>\n",
+       "      <td>-4.265322</td>\n",
+       "      <td>-5.6695</td>\n",
+       "      <td>-0.0485</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7996</th>\n",
+       "      <td>594.876</td>\n",
+       "      <td>-166.724564</td>\n",
+       "      <td>119.735992</td>\n",
+       "      <td>-2.567150</td>\n",
+       "      <td>13.422322</td>\n",
+       "      <td>0.042470</td>\n",
+       "      <td>-0.02686</td>\n",
+       "      <td>-0.001983</td>\n",
+       "      <td>-4.274560</td>\n",
+       "      <td>-4.9157</td>\n",
+       "      <td>0.0203</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7997</th>\n",
+       "      <td>594.916</td>\n",
+       "      <td>-166.433014</td>\n",
+       "      <td>119.288536</td>\n",
+       "      <td>-2.568222</td>\n",
+       "      <td>13.224626</td>\n",
+       "      <td>0.034855</td>\n",
+       "      <td>-0.02117</td>\n",
+       "      <td>-0.001433</td>\n",
+       "      <td>-4.278177</td>\n",
+       "      <td>-5.2175</td>\n",
+       "      <td>-0.7925</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7998</th>\n",
+       "      <td>594.956</td>\n",
+       "      <td>-166.146347</td>\n",
+       "      <td>118.847389</td>\n",
+       "      <td>-2.569167</td>\n",
+       "      <td>13.019039</td>\n",
+       "      <td>0.037049</td>\n",
+       "      <td>-0.01664</td>\n",
+       "      <td>-0.000933</td>\n",
+       "      <td>-4.222267</td>\n",
+       "      <td>-5.6539</td>\n",
+       "      <td>0.3684</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7999</th>\n",
+       "      <td>594.996</td>\n",
+       "      <td>-165.864517</td>\n",
+       "      <td>118.413170</td>\n",
+       "      <td>-2.569713</td>\n",
+       "      <td>12.801240</td>\n",
+       "      <td>0.051131</td>\n",
+       "      <td>-0.01218</td>\n",
+       "      <td>-0.000684</td>\n",
+       "      <td>-4.165312</td>\n",
+       "      <td>-5.8320</td>\n",
+       "      <td>0.4159</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>8000 rows × 11 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         time           x           y       psi         vx        vy        r  \\\n",
+       "0     275.036 -101.308861   19.530313 -2.566862  14.049075  0.064813 -0.00306   \n",
+       "1     275.076 -101.002190   19.059580 -2.566963  14.046067  0.070796 -0.00887   \n",
+       "2     275.116 -100.695587   18.588818 -2.567172  14.046994  0.067643 -0.00909   \n",
+       "3     275.156 -100.389305   18.117285 -2.567444  14.055491  0.059404 -0.01306   \n",
+       "4     275.196 -100.082977   17.645878 -2.567532  14.051016  0.066986  0.00144   \n",
+       "...       ...         ...         ...       ...        ...       ...      ...   \n",
+       "7995  594.836 -167.020935  120.190155 -2.566120  13.627166  0.029047 -0.02381   \n",
+       "7996  594.876 -166.724564  119.735992 -2.567150  13.422322  0.042470 -0.02686   \n",
+       "7997  594.916 -166.433014  119.288536 -2.568222  13.224626  0.034855 -0.02117   \n",
+       "7998  594.956 -166.146347  118.847389 -2.569167  13.019039  0.037049 -0.01664   \n",
+       "7999  594.996 -165.864517  118.413170 -2.569713  12.801240  0.051131 -0.01218   \n",
+       "\n",
+       "         steer         D  real_ax  real_ay  \n",
+       "0     0.001073 -0.419252  -0.2477   0.5202  \n",
+       "1     0.001056 -0.419129  -0.1003   0.1653  \n",
+       "2     0.001126 -0.413074  -0.0117   0.0054  \n",
+       "3     0.001246 -0.449214  -0.0894  -0.0761  \n",
+       "4     0.001262 -0.433608  -0.0839   0.5010  \n",
+       "...        ...       ...      ...      ...  \n",
+       "7995 -0.002339 -4.265322  -5.6695  -0.0485  \n",
+       "7996 -0.001983 -4.274560  -4.9157   0.0203  \n",
+       "7997 -0.001433 -4.278177  -5.2175  -0.7925  \n",
+       "7998 -0.000933 -4.222267  -5.6539   0.3684  \n",
+       "7999 -0.000684 -4.165312  -5.8320   0.4159  \n",
+       "\n",
+       "[8000 rows x 11 columns]"
+      ]
+     },
+     "execution_count": 113,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df"
    ]
   },
   {
